# witness-angel-server

./: .gitignore  CHANGELOG  LICENSE.txt  Readme.rst  build_pyinstaller_executable.sh  ci.sh  manage.py  presetup.py  pyproject.toml  settings.ini  settings.ini.template  setup.cfg  tox.ini
src/: prod_runner.py
src/waescrow/: __init__.py  admin.py  apps.py  escrow.py  escrow_api.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
src/waescrow/management/commands/: generate_free_keys.py
src/waescrow/migrations/: 0001_initial.py  0002_authenticatorpublickey.py  0002_auto_20190917_2250.py  0003_auto_20211123_1616.py  0003_escrowkeypair_created_at.py  0004_auto_20211124_0953.py  0004_escrowkeypair_decrytion_authorized_at.py  0005_auto_20190918_1245.py  0005_auto_20211124_1229.py  0006_auto_20191110_2338.py  0006_auto_20211129_2303.py  0007_auto_20191110_2341.py  0007_auto_20211129_2321.py  0008_auto_20191203_1943.py  0008_auto_20211129_2327.py  0009_auto_20191216_1407.py  0009_auto_20211130_0025.py  0010_auto_20211130_0033.py  0011_auto_20211130_0043.py  0012_auto_20211206_1209.py
src/waserver/: __init__.py  settings.py  urls.py  utils.py  wsgi.py
src/waserver/apps/wagateway/: __init__.py  admin.py  apps.py  core.py  models.py  serializers.py  urls.py  views.py
src/waserver/apps/wagateway/migrations/: 0001_initial.py  0002_auto_20220130_2329.py  0003_auto_20220130_2335.py  0004_auto_20220201_1126.py  0005_auto_20220201_1551.py  0006_auto_20220603_1329.py  0007_auto_20220613_1725.py  0008_auto_20220614_1050.py  0009_rename_public_authenticator_key_symkeydecryptionrequest_target_public_authenticator_key.py  0010_rename_authenticator_user_publicauthenticatorkey_public_authenticator.py  0011_alter_symkeydecryptionrequest_symkey_decryption_status.py  0012_auto_20220707_2351.py  0012_auto_20220714_2318.py  0013_auto_20220727_0348.py  0014_alter_symkeydecryptionrequest_cryptainer_name.py  0015_alter_publicauthenticator_created_by_and_more.py
src/waserver/apps/wasupport/: __init__.py  apps.py  urls.py  views.py
src/waserver/apps/watrustee/: __init__.py  admin.py  apps.py  core.py  models.py  urls.py  views.py
src/waserver/apps/watrustee/management/commands/: generate_free_keys.py
src/waserver/apps/watrustee/migrations/: 0001_initial.py  0002_auto_20220130_2335.py  0003_auto_20220130_2337.py  0004_auto_20220201_1126.py  0005_alter_trusteekeypair_created_by_and_more.py
src/watrustee/: __init__.py  admin.py  models.py  serializers.py  settings.py  trustee.py  urls.py  utils.py  views.py
src/watrustee/management/commands/: generate_free_keys.py
src/watrustee/migrations/: 0004_auto_20211124_0953.py  0005_auto_20211124_1229.py  0007_auto_20211129_2321.py  0008_auto_20211129_2327.py  0009_auto_20211130_0025.py  0012_auto_20211206_1209.py  0013_auto_20220111_1228.py  0014_auto_20220111_1737.py  0015_auto_20220126_1441.py
tests/: test_admin_pages.py  test_wagateway.py  test_waserver_common.py  test_waserver_escrow_api.py  test_waserver_management_commands.py  test_wasupport.py  test_watrustee.py
tools/: prod_get_keys_fuzzer.py
