[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "waescrow"
description = "Witness Angel Escrow Webservices"
version = "0.1"
license = "MIT"
readme = "Readme.rst"
authors = ["Pascal Chambon", "Manon Michelet"]
homepage = "https://github.com/WitnessAngel/witness-angel-escrow"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
]
include = ["CHANGELOG", "tox.ini", "docs/*", "docs/api/*", "tests/*.py"]
exclude = ["_build"]

[tool.poetry.dependencies]
python = ">=3.6"

# Witness Angel system
wacryptolib = "^0.2.0"

# Django & Bson
Django = "^2.2"
json-rpc-django = "^1.0"
schema = "^0.7.0"
django_cryptography = "^0.3.0"

[tool.poetry.dev-dependencies]

# Test runners and plugins
pytest = "^4.5"
pytest-cov = "^2.7"
pytest-randomly = "^3.0"
pytest-deadfixtures = "^2.1"
pytest-testmon = "^0.9"
pytest-timeout = "^1.3"
pytest-django = "^3.5"
freezegun = "^0.3.12"

# Linters and formatters
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pylint = "^2.3"
safety = "^1.8"
yamllint = "^1.15"
xenon = "^0.5"
mypy = "^0.701"
doc8 = "^0.8"

# Documentation
sphinx = "^2.0"
sphinx-autodoc-typehints = "^1.6"
sphinx_rtd_theme = "^0.4.3"
toml = "^0.10.0"

# Frozen executable building
pyinstaller = "^3.5"

