[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "waserver"
description = "Witness Angel Webservices"
version = "0.3"
license = "MIT"
readme = "Readme.rst"
authors = ["Pascal Chambon", "Manon Michelet", "Francinette Atchade"]
homepage = "https://github.com/WitnessAngel/witness-angel-server"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
]
include = ["CHANGELOG", "tox.ini", "settings.ini", "docs/*", "docs/api/*", "tests/*.py"]
exclude = ["_build"]

[tool.poetry.dependencies]
python = ">=3.7, <3.10"

# Witness Angel system
wacryptolib = { git = "https://github.com/WitnessAngel/witness-angel-cryptolib.git", branch = "waserver_stable" }

# Django & Bson
Django = "^3.2"
json-rpc-django = "^1.0"
schema = "^0.7.0"
django_cryptography = "^1.0"
python-decouple = "^3.3"
django-model-utils = "^4.1.1"
django-rest-framework = "^0.1.0"
django-changeset = "^1.1.0"
django-utils-six = "^2.0"

[tool.poetry.dev-dependencies]

# Test runners and plugins
pytest = "^4.5"
pytest-cov = "^2.7"
pytest-randomly = "^3.0"
pytest-deadfixtures = "^2.1"
pytest-testmon = "^0.9"
pytest-timeout = "^1.3"
pytest-django = "^3.5"
pytest-pythonpath = "^0.7.3"
freezegun = "^0.3.12"
typeguard = "^2.10.0"
model-bakery = "^1.6.0"

# Linters and formatters
black = {version = "^18.3-alpha.0", allow-prereleases = true}
pylint = "^2.3"
safety = "^1.8"
yamllint = "^1.15"
xenon = "^0.5"
mypy = "^0.910"
doc8 = "^0.8"
typed-ast = ">=1.4.0"  # Recent version necessay for python3.8 and pylint/mypy

# Documentation
sphinx = "^2.0"
sphinx-autodoc-typehints = "^1.6"
sphinx_rtd_theme = "^0.4.3"
toml = ">=0.10.0"

# Frozen executable building
pyinstaller = "^3.5"

